--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">TodoAndroid</string>
+    <string name="sign_in">Sign In</string>
+    <string name="sign_in_hint">Email</string>
+    <string name="hint_password">Password</string>
+    <string name="text_button">Sign In</string>
+    <string name="create_account_button">Create Account</string>
+    <string name="dont_have_an_account">Don\'t have an account?</string>
 </resources>
