--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">TodoAndroid</string>
     <string name="sign_in">Sign In</string>
-    <string name="sign_in_hint">Email</string>
+    <string name="sign_in_hint">Username</string>
     <string name="hint_password">Password</string>
     <string name="text_button">Sign In</string>
     <string name="create_account_button">Create Account</string>
