--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">TodoAndroid</string>
+    <string name="app_name">Todo app</string>
     <string name="sign_in">Sign In</string>
     <string name="sign_in_hint">Username</string>
     <string name="hint_password">Password</string>
