--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="text_button">Sign In</string>
     <string name="create_account_button">Create Account</string>
     <string name="dont_have_an_account">Don\'t have an account?</string>
+    <string name="are_you_sure">Are you sure you want to delete this item?</string>
+    <string name="yes_delete">yes</string>
+    <string name="no_delete">no</string>
 </resources>
