--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,18 @@
 <resources>
     <string name="app_name">Todo app</string>
     <string name="sign_in">Sign In</string>
+    <string name="sign_up">Sign Up</string>
     <string name="sign_in_hint">Username</string>
+    <string name="email_hint">Email</string>
     <string name="hint_password">Password</string>
     <string name="text_button">Sign In</string>
+    <string name="text_button_sign_up">Sign Up</string>
     <string name="create_account_button">Create Account</string>
+    <string name="signin_account_button">Sign In</string>
+
     <string name="dont_have_an_account">Don\'t have an account?</string>
+    <string name="already_have_an_account">Already have an account?</string>
+
     <string name="are_you_sure">Are you sure you want to delete this item?</string>
     <string name="yes_delete">yes</string>
     <string name="no_delete">no</string>
